force-app/main/default/objects/LLC_BI__Budget_Transaction_Request__c/fields/LLC_BI__Amount_Budgeted__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount_Budgeted__c</fullName>
    <description>Formula field that reads in the budget line item amount budgeted field.</description>
    <formula>LLC_BI__Budget_Line_Item__r.LLC_BI__Amount_Budgeted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Budgeted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>