force-app/main/default/objects/LLC_BI__Budget_Transaction_Request__c/fields/LLC_BI__Amount_Funded__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount_Funded__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The amount approved funded for this budget transaction request.</description>
    <label>Amount Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>