force-app/main/default/objects/LLC_BI__Budget_Transaction_Request__c/fields/LLC_BI__Budget_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Budget_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the budget line item associated with this budget transaction request.</description>
    <label>Budget Line Item</label>
    <referenceTo>LLC_BI__Budget_Line_Item__c</referenceTo>
    <relationshipLabel>Budget Transaction Requests</relationshipLabel>
    <relationshipName>Budget_Transaction_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>